# Text-Processing

./: LICENSE  pyproject.toml
libs/pandas_parser/: exceptions.py  parser.py
libs/text_preprocess/: clean_html.py  preprocessing.py  unicode_util.py
libs/vietnamese_words/: make_words.py  pair_rules.py  trie.py
libs/vietnamese_words/assets/: normalization_vidiacritics.tsv  pair_rules.json  sounds.json  words.txt
libs/vietnamese_words/scripts/: make_normalization_rule.py
